# LuxePOS-Lite

./: .gitignore  CHANGELOG.md  README.md  capacitor.config.json  luxepos-lite.html  package.json  playwright.config.js
.claude/: launch.json
.github/workflows/: build-android.yml  build-mac.yml  build-windows.yml  release.yml
android/app/: build.gradle
android/app/src/androidTest/java/com/getcapacitor/myapp/: ExampleInstrumentedTest.java
android/app/src/main/java/ch/luxepos/lite/: MainActivity.java
android/app/src/main/res/values/: strings.xml
dist-web/: index.html  luxepos-lite.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: smoke.spec.js
website/: index.html
